Adding a migration script for sellers and a company field

--- a/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
+++ b/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
@@ -45,6 +45,9 @@
 .node-listing-form .field-name-field-seller-first-name {
   margin-right: 2%;
 }
+.node-listing-form .field-name-field-seller-company {
+  clear: left;
+}
 .node-listing-form .field-name-field-seller-address {
   clear: left;
 }
