Adding the ability to hide/show former agents on the lisitng form

--- a/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
+++ b/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
@@ -95,3 +95,7 @@
 .node-listing-form .field-name-field-seller-internal-only input:checked+label {
   color: #C33;
 }
+
+.node-listing-form .show-agents {
+  padding-left: 1em;
+}
