Themeing and making awesome the search form

--- a/docroot/sites/all/themes/escrow/sass/partials/design/_design.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/design/_design.scss
@@ -6,3 +6,8 @@
 //
 // All styling, non box model properties go here
 ////////////////////////
+
+////////////////////////
+// Search
+////////////////////////
+@import 'search/search_form';
