--- a/docroot/sites/all/themes/escrow/sass/partials/styleguide/_style-guide.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/styleguide/_style-guide.scss
@@ -14,5 +14,9 @@
 //  If you'd like a hard reset, uncomment `compass/reset`.
 //  If you'd prefer a soft reset, uncomment `compass-normalize`
 //////////////////////////////
-// @import 'compass/rest';
-// @import 'compass-normalize';
+@import 'normalize';
+
+////////////////////////
+// Import Forms
+////////////////////////
+@import 'forms/forms';
