--- a/docroot/sites/all/themes/escrow/sass/partials/layout/_layout.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/layout/_layout.scss
@@ -6,3 +6,8 @@
 //
 // All box model properties go here
 ////////////////////////
+
+////////////////////////
+// Search
+////////////////////////
+@import 'search/search_form';
