--- a/docroot/sites/all/themes/escrow/sass/partials/global/_base.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_base.scss
@@ -12,6 +12,8 @@
 @import 'singularitygs';
 @import 'toolkit';
 @import 'sassy-buttons';
+@import 'animation';
+@import "animation/animate";
 
 ////////////////////////
 // Private Imports
