--- a/docroot/sites/all/themes/escrow/sass/partials/styleguide/forms/_forms.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/styleguide/forms/_forms.scss
@@ -9,4 +9,15 @@ input {
 input[type="button"],
 input[type="submit"] {
   cursor: pointer;
+  color: #fff;
+  @include text-shadow(#666 1px 1px 2px);
+  @include background(linear-gradient(top, #999, #ccc));
+
+  &:hover {
+    @include box-shadow(#666 1px 1px 2px);
+  }
+}
+
+.ui-slider-horizontal .ui-slider-range {
+  @include background(linear-gradient(top, $c21green + rgba(50,50,50,1), $c21green));
 }
