Changing names of color variables

--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -4,4 +4,15 @@
 // All of your variables should go in this file.
 ////////////////////////
 
-$c21green:    #125819;
+
+///////////////////////
+// Breakpoints
+///////////////////////
+$bp500: 500px 699px;
+$bp700: 700px;
+
+
+///////////////////////
+// Colors
+///////////////////////
+$color_green:    #125819;
