Setting site-wide fonts, grid, link styles, etc

--- a/docroot/sites/all/themes/escrow/sass/partials/design/_design.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/design/_design.scss
@@ -7,8 +7,6 @@
 // All styling, non box model properties go here
 ////////////////////////
 
-////////////////////////
-// Search
-////////////////////////
+@import 'general/general';
 @import 'search/search_form';
 @import 'header/header';
