--- a/docroot/sites/all/themes/escrow/sass/partials/layout/_layout.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/layout/_layout.scss
@@ -7,8 +7,7 @@
 // All box model properties go here
 ////////////////////////
 
-////////////////////////
-// Search
-////////////////////////
+@import 'general/general';
+@import 'grid/grid';
 @import 'header/header';
 @import 'search/search_form';
