--- a/docroot/sites/all/themes/escrow/sass/partials/styleguide/_style-guide.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/styleguide/_style-guide.scss
@@ -14,7 +14,7 @@
 //  If you'd like a hard reset, uncomment `compass/reset`.
 //  If you'd prefer a soft reset, uncomment `compass-normalize`
 //////////////////////////////
-@import 'normalize';
+@import 'compass/reset';
 
 ////////////////////////
 // Import Forms
