--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -16,3 +16,10 @@ $bp700: 700px;
 // Colors
 ///////////////////////
 $color_green:    #125819;
+
+
+///////////////////////
+// Text
+///////////////////////
+$font_size_base: 1.2em;
+$font_size_callout: 1.7em;
