--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -22,4 +22,4 @@ $color_green:    #125819;
 // Text
 ///////////////////////
 $font_size_base: 1.2em;
-$font_size_callout: 1.4em;
+$font_size_title: 1.4em;
