--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -23,3 +23,8 @@ $color_green:    #125819;
 ///////////////////////
 $font_size_base: 1.2em;
 $font_size_title: 1.4em;
+
+///////////////////////
+// Layout
+///////////////////////
+$spacing_default: .5em;
