Created featured image functionality

--- a/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
@@ -9,6 +9,7 @@
 @import 'general/general';
 @import 'general/messages';
 @import 'general/tabs';
+@import 'general/horizontal_scroller';
 @import 'listing/listing';
 @import 'search/search_form';
 @import 'header/header';
