Theming the listing detail page

--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -29,4 +29,26 @@
     text-align: right;
     font-weight: bold;
   }
+
+  .description {
+    margin: $spacing_default 0 (2 * $spacing_default) 0;
+  }
+
+  .group_listing_statistics {
+    @include float-span(3, 'first');
+
+    .stat {
+      diaplay: block;
+      width: 3em;
+      white-space: nowrap;
+      float: left;
+    }
+  }
+  .group_listing_location_details {
+    @include float-span(3, 'last');
+  }
+
+  .agents {
+    clear: both;
+  }
 }
