Improving the listing detail page theme at wider viewports

--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -51,4 +51,18 @@
   .agents {
     clear: both;
   }
+
+  @include breakpoint($bp500) {
+    .group_listing_statistics {
+      @include float-span(2, 'first');
+    }
+    .group_listing_location_details {
+      @include float-span(2);
+    }
+    .agents {
+      @include float-span(2, 'last');
+      clear: none;
+    }
+  }
+
 }
