Fixing box sizing to work with grids

--- a/docroot/sites/all/themes/escrow/sass/partials/components/general/_general.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/general/_general.scss
@@ -1,6 +1,11 @@
+*, *:before, *:after {
+  @include box-sizing('border-box');
+}
+
+
 body {
   font-family: 'Muli', 'Hevetica', 'Arial';
-  /* padding: 0 $spacing_default; */
+  padding: 0 $spacing_default;
 }
 
 a {
