--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -98,3 +98,22 @@
     }
   }
 }
+
+.node-agent {
+  margin-bottom: 4 * $spacing_default;
+
+  .headshot {
+    padding: $spacing_default 0;
+  }
+
+  .full-name {
+    font-weight: bold;
+    font-size: $font_size_title;
+  }
+
+  .phone-number {
+    display: block;
+    margin: $spacing_default 0;
+  }
+}
+
