Turning off the grid on prod

--- a/docroot/sites/all/themes/escrow/sass/partials/components/grid/_grid.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/grid/_grid.scss
@@ -3,5 +3,7 @@ $gutters: 1/4;
 $output: 'isolation';
 
 body {
-  @include background-grid();
+  &.environment-local {
+    @include background-grid();
+  }
 }
