--- a/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
@@ -10,6 +10,8 @@
 @import 'general/messages';
 @import 'general/tabs';
 @import 'general/horizontal_scroller';
+@import 'general/flexslider';
+@import 'blocks/featured_listings';
 @import 'listing/listing';
 @import 'search/search_form';
 @import 'header/header';
