--- a/docroot/sites/all/themes/escrow/sass/partials/components/grid/_grid.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/grid/_grid.scss
@@ -4,6 +4,6 @@ $output: 'isolation';
 
 body {
   &.environment-local {
-    @include background-grid();
+   /* @include background-grid();*/
   }
 }
