--- a/docroot/sites/all/themes/escrow/sass/partials/components/header/_header.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/header/_header.scss
@@ -2,7 +2,7 @@
   @include clearfix();
   margin: 0 $spacing_default_neg $spacing_large $spacing_default_neg;
   padding-top: $spacing_large;
-  @include background(linear-gradient(top, $color_gray, $color_gray_light));
+  @include background(linear-gradient(top, $color_gray_light, $color_gray));
   border-bottom: 3px solid $color_gold;
 }
 
