--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -17,8 +17,9 @@ $bp700: 700px;
 ///////////////////////
 $color_green:    #125819;
 $color_green_light: $color_green + rgba(50,50,50,1);
+$color_green_very_light: #E5FAE7;
 $color_gold: #ECB429;
-$color_gray: #999;
+$color_gray: #CCC;
 $color_gray_light: #EEE;
 
 ///////////////////////
