More homepage themeing

--- a/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
@@ -11,7 +11,7 @@
 @import 'general/tabs';
 @import 'general/horizontal_scroller';
 @import 'general/flexslider';
-@import 'blocks/featured_listings';
+@import 'blocks/listings';
 @import 'listing/listing';
 @import 'search/search_form';
 @import 'header/header';
