--- a/docroot/sites/all/themes/escrow/sass/partials/components/blocks/_listings.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/blocks/_listings.scss
@@ -1,15 +1,21 @@
-#block-views-c21-featured-listings-block {
+.featured-listings,
+.recently-added-listings {
   @include clearfix();
   margin-bottom: 2 * $spacing_large;
 
-  header {
+  header h2 {
     font-size: $font_size_title;
     font-weight: bold;
     margin-bottom: $spacing_default;
   }
 
   .more-link {
-    float: right;
+    display: block;
+    text-align: center;
     margin: .5 * $spacing_default $spacing_default 0 0;
+
+    a {
+      color: $color_gray_dark;
+    }
   }
 }
