--- a/docroot/sites/all/themes/escrow/sass/partials/components/general/_flexslider.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/general/_flexslider.scss
@@ -1,14 +1,10 @@
 .flexslider {
   margin: 0;
-/*
   padding: 0;
   border: 0;
+  background: none;
   @include box-shadow(0 0 0);
   @include border-radius(0);
-*/
-  .mls-number {
-    text-align: right;
-  }
 }
 
 .flex-control-nav {
