--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -16,11 +16,12 @@ $bp700: 700px;
 // Colors
 ///////////////////////
 $color_green:    #125819;
-$color_green_light: $color_green + rgba(50,50,50,1);
-$color_green_very_light: #E5FAE7;
+$color_green_light: lighten($color_green, 10%);
+$color_green_very_light: lighten($color_green, 25%);
 $color_gold: #ECB429;
 $color_gray: #CCC;
 $color_gray_light: #EEE;
+$color_gray_dark: #999;
 
 ///////////////////////
 // Text
