Theming the hompage

--- a/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
@@ -12,7 +12,7 @@
 @import 'general/horizontal_scroller';
 @import 'general/flexslider';
 @import 'blocks/footer';
-@import 'blocks/listings';
+@import 'blocks/listings_sliders';
 @import 'listing/listing';
 @import 'search/search_form';
 @import 'header/header';
