--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -64,6 +64,11 @@
         }
       }
     }
+    @include breakpoint($bp1075) {
+      .photo {
+        width: 60%;
+      }
+    }
   }
 
   .mls-number {
