--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -8,9 +8,11 @@
 ///////////////////////
 // Breakpoints
 ///////////////////////
-$bp500: 500px 649px;
+$bp400: 400px;
+$bp500: 500px;
 $bp650: 650px;
 $bp800: 800px;
+$bp1075: 1075px;
 
 
 ///////////////////////
