--- a/docroot/sites/all/themes/escrow/sass/partials/components/forms/_forms.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/forms/_forms.scss
@@ -7,15 +7,10 @@ input {
 }
 
 input[type="button"],
-input[type="submit"] {
+input[type="submit"],
+button {
   cursor: pointer;
-  color: #fff;
-  @include text-shadow(#666 1px 1px 2px);
-  @include background(linear-gradient(top, #999, #ccc));
-
-  &:hover {
-    @include box-shadow(#666 1px 1px 2px);
-  }
+  @include sassy-button("matte", 10px, $font_size_base, $color_green, $color_green_light);
 }
 
 .ui-slider-horizontal .ui-slider-range {
