--- a/docroot/sites/all/themes/escrow/sass/partials/components/header/_header.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/header/_header.scss
@@ -11,12 +11,18 @@
 
   .office-phone {
     display: block;
-    font-size: $font_size_title;
+    font-size: .9 * $font_size_base;
     font-weight: bold;
   }
 
   li:first-child {
     margin: $spacing_default 0 2*$spacing_default 0;
+  }
+
+  @include breakpoint($bp400) {
+    .office-phone {
+      font-size: $font_size_title;
+    }
   }
 
   @include breakpoint($bp650) {
